; ModuleID = '/home/carl/AnghaBench/linux/security/apparmor/extr_lsm.c_apparmor_socket_sendmsg.c'
source_filename = "/home/carl/AnghaBench/linux/security/apparmor/extr_lsm.c_apparmor_socket_sendmsg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socket = type { i32 }
%struct.msghdr = type { i32 }

@OP_SENDMSG = common dso_local global i32 0, align 4
@AA_MAY_SEND = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.socket*, %struct.msghdr*, i32)* @apparmor_socket_sendmsg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @apparmor_socket_sendmsg(%struct.socket* %0, %struct.msghdr* %1, i32 %2) #0 {
  %4 = alloca %struct.socket*, align 8
  %5 = alloca %struct.msghdr*, align 8
  %6 = alloca i32, align 4
  store %struct.socket* %0, %struct.socket** %4, align 8
  store %struct.msghdr* %1, %struct.msghdr** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* @OP_SENDMSG, align 4
  %8 = load i32, i32* @AA_MAY_SEND, align 4
  %9 = load %struct.socket*, %struct.socket** %4, align 8
  %10 = load %struct.msghdr*, %struct.msghdr** %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @aa_sock_msg_perm(i32 %7, i32 %8, %struct.socket* %9, %struct.msghdr* %10, i32 %11)
  ret i32 %12
}

declare dso_local i32 @aa_sock_msg_perm(i32, i32, %struct.socket*, %struct.msghdr*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
